Prevent NPE on non existing token